--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,8 @@ section {
 button {
   font: inherit;
   cursor: pointer;
-  background: #230052;
-  border: 1px solid #230052;
+  background: #000000;
+  border: 1px solid #322f35;
   color: white;
   padding: 0.75rem 2rem;
   border-radius: 20px;
@@ -24,6 +24,6 @@ button:focus {
 
 button:hover,
 button:active {
-  background-color: #460897;
-  border-color: #460897;
+  background-color: #322f35;
+  border-color: #322f35;
 }
